zero-schema-macros/tests/ui/fail/23_collision_copy_into.rs
use zero_schema_macros::zero;

#[zero]
struct CopyIntoCollision {
    copy_into: u8,
}

fn main() {}
